--- a/14_async/setTimeout.html
+++ b/14_async/setTimeout.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./index.js" defer></script>
-  <title>Document</title>
+  <script src="./setTimeout.js" defer></script>
+  <title>setTimeout</title>
 </head>
 <body>
-  <h1>Async</h1>
+  <h1>setTimeout</h1>
    
-  <button id="btn">stop</button>
+  
 
 </body>
 </html>
